--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "readblendr",
+    "name": "Readblendr",
     "slug": "readblendr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "readblendr",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
